--- a/P3D_Bilhar/P3D_Bilhar/P3D_Bilhar.vcxproj.filters
+++ b/P3D_Bilhar/P3D_Bilhar/P3D_Bilhar.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="glm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="tga.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp">
@@ -59,5 +62,12 @@
     <ClCompile Include="glm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="tga.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="PoolBall1.tga" />
+    <Image Include="PoolBalluv1.tga" />
   </ItemGroup>
 </Project>
