--- a/P3D_Bilhar/P3D_Bilhar/P3D_Bilhar.vcxproj.filters
+++ b/P3D_Bilhar/P3D_Bilhar/P3D_Bilhar.vcxproj.filters
@@ -69,5 +69,11 @@
   <ItemGroup>
     <Image Include="PoolBall1.tga" />
     <Image Include="PoolBalluv1.tga" />
+    <Image Include="..\..\..\..\..\Desktop\bottom.tga" />
+    <Image Include="..\..\..\..\..\Desktop\front.tga" />
+    <Image Include="..\..\..\..\..\Desktop\left.tga" />
+    <Image Include="..\..\..\..\..\Desktop\right.tga" />
+    <Image Include="..\..\..\..\..\Desktop\top.tga" />
+    <Image Include="..\..\..\..\..\Desktop\back.tga" />
   </ItemGroup>
 </Project>
