--- a/P3D_Bilhar/P3D_Bilhar/P3D_Bilhar.vcxproj
+++ b/P3D_Bilhar/P3D_Bilhar/P3D_Bilhar.vcxproj
@@ -39,12 +39,12 @@
     <ClCompile Include="tga.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\..\..\..\..\Desktop\cm_back.tga" />
-    <Image Include="..\..\..\..\..\Desktop\cm_bottom.tga" />
-    <Image Include="..\..\..\..\..\Desktop\cm_front.tga" />
-    <Image Include="..\..\..\..\..\Desktop\cm_left.tga" />
-    <Image Include="..\..\..\..\..\Desktop\cm_right.tga" />
-    <Image Include="..\..\..\..\..\Desktop\cm_top.tga" />
+    <Image Include="cm_back.tga" />
+    <Image Include="cm_bottom.tga" />
+    <Image Include="cm_front.tga" />
+    <Image Include="cm_left.tga" />
+    <Image Include="cm_right.tga" />
+    <Image Include="cm_top.tga" />
     <Image Include="PoolBall1.tga" />
     <Image Include="PoolBalluv1.tga" />
   </ItemGroup>
