--- a/P3D_Bilhar/P3D_Bilhar/P3D_Bilhar.vcxproj
+++ b/P3D_Bilhar/P3D_Bilhar/P3D_Bilhar.vcxproj
@@ -25,6 +25,7 @@
     <ClInclude Include="Game1.h" />
     <ClInclude Include="glm.h" />
     <ClInclude Include="MainWindow.h" />
+    <ClInclude Include="Poolcue.h" />
     <ClInclude Include="Pooltable.h" />
     <ClInclude Include="tga.h" />
   </ItemGroup>
@@ -35,6 +36,7 @@
     <ClCompile Include="glm.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainWindow.cpp" />
+    <ClCompile Include="Poolcue.cpp" />
     <ClCompile Include="Pooltable.cpp" />
     <ClCompile Include="tga.cpp" />
   </ItemGroup>
@@ -131,6 +133,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <ProgramDataBaseFileName>C:\users\andre\Documents\GitHub\P3D\release\$(ProjectName)$(IntDir)vc$(PlatformToolsetVersion).pdb</ProgramDataBaseFileName>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
