--- a/P3D_Bilhar/P3D_Bilhar/P3D_Bilhar.vcxproj.filters
+++ b/P3D_Bilhar/P3D_Bilhar/P3D_Bilhar.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="tga.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Poolcue.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp">
@@ -63,6 +66,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="tga.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Poolcue.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
